@@ -1,0 +1,18 @@
+Class:      class $Proxy0
+Interfaces: @(interface java.lang.Comparable)
+Value:      <&foo as an object>
+Trace: &local('$a') at newInstance.sl:10
+I have been called with: compareTo
+Trace: &println('I have been called with: compareTo') at newInstance.sl:12
+My args are:
+Trace: &println('My args are:') at newInstance.sl:13
+  0 => foo
+Trace: &println('  0 => foo') at newInstance.sl:16
+Trace: [&closure[newInstance.sl:5-19]#1 compareTo: 'foo'] = 3 at <Java>:-1
+Trace: [$Proxy0 compareTo: 'foo'] = 3 at newInstance.sl:29
+3
+Trace: &println(3) at newInstance.sl:29
+Trace: &debug(7) = 7 at newInstance.sl:31
+Class:      class $Proxy1
+Interfaces: @(interface java.util.List, interface java.lang.Comparable)
+Value:      <&foo as an object>
