@@ -25,6 +25,8 @@
   as the type to cast to.  
 - added a lindexOf function to obtain the last index of a substring
 - sleep console now shares one pool of imported packages for evaluations
+- added newInstance(^Class|@, &closure) for creating a proxy instance
+  of a Java object backed by the specified interfaces
 
 2.1-beta 16  (11 Jun 07)
 ===========
